--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation("androidx.cardview:cardview:1.0.0")
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
 }
