--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     // Koin for Kotlin
     implementation "org.koin:koin-core:$koin_version"
     implementation project(path: ':idbdata')
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation "org.koin:koin-test:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
@@ -71,5 +71,9 @@ dependencies {
 
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'androidx.preference:preference-ktx:1.1.1'
+
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+
+
 
 }
